@@ -3,7 +3,8 @@ use strict;
 use warnings;
 
 use Test::More;
-plan tests => 3;
+
+use Scalar::Util 'blessed';
 
 use lib 't/lib';
 
@@ -11,7 +12,14 @@ use lib 't/lib';
   package Class;
   use TestMexp
     foo => { -as => 'bar' },
-    foo => { -as => 'baz' };
+    foo => { -as => 'baz' },
+    blessed_method => { -as => 'lost_bless' };
+
+  use TestMexp
+    {
+      installer => Sub::Exporter::ForMethods::method_installer({rebless => 1})
+    },
+    blessed_method => { -as => 'kept_bless' };
 
   use TestDexp
     foo => { -as => 'quux' };
@@ -34,4 +42,8 @@ use lib 't/lib';
   unlike($mess, qr{Class::quuz}, "quuz method doesn't have its own name");
 }
 
-1;
+is( blessed(Class->can('lost_bless')), undef, "we normally do not rebless");
+
+is( blessed(Class->can('kept_bless')), 'TestMexp', "...but we can");
+
+done_testing;
