@@ -4,7 +4,7 @@ package TestMexp;
 
 use Sub::Exporter::ForMethods qw(method_installer);
 use Sub::Exporter -setup => {
-  exports   => [ qw(foo) ],
+  exports   => [ qw(foo blessed_method) ],
   installer => method_installer,
 };
 
@@ -14,6 +14,12 @@ sub foo {
   my ($self, @arg) = @_;
 
   Carp::longmess("$self -> foo ( @_ )");
+}
+
+BEGIN {
+  my $sub = sub { };
+  bless $sub, __PACKAGE__;
+  *blessed_method = $sub;
 }
 
 1;
